// Vitest Snapshot v1

exports[`Job example > Change release version 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Namespace",
    "metadata": {
      "labels": {
        "app": "example-job-app",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-job-app-development-local",
      },
      "name": "example-job-app-test",
      "namespace": "example-job-app-test",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "ResourceQuota",
    "metadata": {
      "labels": {
        "app": "example-job-app",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-job-app-development-local",
      },
      "name": "quota",
      "namespace": "example-job-app-test",
    },
    "spec": {
      "hard": {
        "cpu": "200m",
        "memory": "200Mi",
        "pods": 2,
      },
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      ".dockerconfigjson": "eyJhdXRocyI6eyJodHRwczovL2luZGV4LmRvY2tlci5pby92MS8iOnsiYXV0aCI6ImMyOXRaWFZ6WlhJNmMyVmpjbVYwTVRJeiJ9fX0=",
    },
    "kind": "Secret",
    "metadata": {
      "labels": {
        "app": "example-job-app",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-job-app-development-local",
      },
      "name": "docker-hub-cred",
      "namespace": "example-job-app-test",
    },
    "type": "kubernetes.io/dockerconfigjson",
  },
  {
    "apiVersion": "batch/v1",
    "kind": "Job",
    "metadata": {
      "labels": {
        "app": "example-job-app",
        "environment": "development",
        "instance": "job-example",
        "managed-by": "cdk8s",
        "region": "local",
        "release": "v2.2",
        "role": "job",
        "service": "example-job-app-development-local",
      },
      "name": "job-example",
      "namespace": "example-job-app-test",
    },
    "spec": {
      "backoffLimit": 6,
      "template": {
        "metadata": {
          "labels": {
            "app": "example-job-app",
            "environment": "development",
            "instance": "job-example",
            "managed-by": "cdk8s",
            "region": "local",
            "release": "v2.2",
            "role": "job",
            "service": "example-job-app-development-local",
          },
        },
        "spec": {
          "containers": [
            {
              "command": [
                "/bin/sh",
                "-c",
                "echo hello",
              ],
              "image": "docker.io/organization/my-app:job-v2.2",
              "imagePullPolicy": "IfNotPresent",
              "name": "example-job-app",
              "resources": {
                "requests": {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
              "workingDir": "/some/path",
            },
          ],
          "imagePullSecrets": [
            {
              "name": "docker-hub-cred",
            },
          ],
          "restartPolicy": "OnFailure",
        },
      },
      "ttlSecondsAfterFinished": 100,
    },
  },
]
`;

exports[`Job example > Snapshot 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Namespace",
    "metadata": {
      "labels": {
        "app": "example-job-app",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-job-app-development-local",
      },
      "name": "example-job-app-test",
      "namespace": "example-job-app-test",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "ResourceQuota",
    "metadata": {
      "labels": {
        "app": "example-job-app",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-job-app-development-local",
      },
      "name": "quota",
      "namespace": "example-job-app-test",
    },
    "spec": {
      "hard": {
        "cpu": "200m",
        "memory": "200Mi",
        "pods": 2,
      },
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      ".dockerconfigjson": "eyJhdXRocyI6eyJodHRwczovL2luZGV4LmRvY2tlci5pby92MS8iOnsiYXV0aCI6ImMyOXRaWFZ6WlhJNmMyVmpjbVYwTVRJeiJ9fX0=",
    },
    "kind": "Secret",
    "metadata": {
      "labels": {
        "app": "example-job-app",
        "environment": "development",
        "managed-by": "cdk8s",
        "region": "local",
        "service": "example-job-app-development-local",
      },
      "name": "docker-hub-cred",
      "namespace": "example-job-app-test",
    },
    "type": "kubernetes.io/dockerconfigjson",
  },
  {
    "apiVersion": "batch/v1",
    "kind": "Job",
    "metadata": {
      "labels": {
        "app": "example-job-app",
        "environment": "development",
        "instance": "job-example",
        "managed-by": "cdk8s",
        "region": "local",
        "release": "v1.0",
        "role": "job",
        "service": "example-job-app-development-local",
      },
      "name": "job-example",
      "namespace": "example-job-app-test",
    },
    "spec": {
      "backoffLimit": 6,
      "template": {
        "metadata": {
          "labels": {
            "app": "example-job-app",
            "environment": "development",
            "instance": "job-example",
            "managed-by": "cdk8s",
            "region": "local",
            "release": "v1.0",
            "role": "job",
            "service": "example-job-app-development-local",
          },
        },
        "spec": {
          "containers": [
            {
              "command": [
                "/bin/sh",
                "-c",
                "echo hello",
              ],
              "image": "docker.io/organization/my-app:job-v1.0",
              "imagePullPolicy": "IfNotPresent",
              "name": "example-job-app",
              "resources": {
                "requests": {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
              "workingDir": "/some/path",
            },
          ],
          "imagePullSecrets": [
            {
              "name": "docker-hub-cred",
            },
          ],
          "restartPolicy": "OnFailure",
        },
      },
      "ttlSecondsAfterFinished": 100,
    },
  },
]
`;
